# xlstream

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HOWITWORKS.md  LICENSE-MIT  Makefile  README.md  SECURITY.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
benchmarks/: .gitignore  Cargo.toml
benchmarks/benches/: aggregate.rs  arithmetic.rs  conditional.rs  date.rs  end_to_end.rs  financial.rs  info.rs  lookup.rs  math.rs  parse.rs  quick.rs  statistical.rs  string.rs
benchmarks/reports/: unreleased.md  v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.3.0.md  v0.4.0.md
bindings/python/: .gitignore  Cargo.toml  README.md  pyproject.toml
bindings/python/py_src/xlstream/: __init__.py  _xlstream.pyi
bindings/python/src/: lib.rs
bindings/python/tests/: conftest.py  test_concurrency.py  test_evaluate.py  test_exceptions.py
crates/xlstream/: Cargo.toml  README.md
crates/xlstream-cli/: Cargo.toml  README.md
crates/xlstream-cli/src/: main.rs
crates/xlstream-cli/tests/: classify_smoke.rs
crates/xlstream-core/: Cargo.toml  README.md
crates/xlstream-core/src/: address.rs  cell_error.rs  coerce.rs  date.rs  error.rs  lib.rs  options.rs  value.rs
crates/xlstream-eval/: Cargo.toml  README.md
crates/xlstream-eval/src/: criteria.rs  evaluate.rs  formula_lexer.rs  formula_template.rs  interp.rs  lib.rs  ops.rs  prelude.rs  prelude_plan.rs  registry.rs  scope.rs  topo.rs
crates/xlstream-eval/src/builtins/: aggregate.rs  compatibility.rs  conditional.rs  convert.rs  database.rs  date.rs  engineering.rs  financial.rs  info.rs  lookup.rs  math.rs  mod.rs  multi_conditional.rs  specfn.rs  statistical.rs  string.rs  subtotal.rs
crates/xlstream-eval/src/lookup/: loader.rs  mod.rs  sheet.rs  value.rs
crates/xlstream-eval/tests/: README.md  aggregates.rs  arithmetic.rs  comparison.rs  concat.rs  conditional.rs  conformance.rs  date.rs  end_to_end.rs  eval_end_to_end.rs  info_financial.rs  keep_formulas.rs  lookup_end_to_end.rs  math.rs  named_ranges.rs  parallel.rs  perf_smoke.rs  precedence.rs  range_expansion.rs  regression.rs  regression_base.rs  regression_per_issue.rs  sheet_order.rs  string.rs  unary.rs
crates/xlstream-eval/tests/conformance/: aggregate.rs  date.rs  engineering.rs  financial.rs  info.rs  issues.rs  logical.rs  lookup.rs  math.rs  mod.rs  operators.rs  statistical.rs  text.rs
crates/xlstream-eval/tests/end_to_end/: cross_sheet_aggregates.rs  grouped_sumif.rs  lookups.rs  minifs_maxifs.rs  named_ranges.rs  pipeline.rs  product_literals.rs  secondary_sheet_formulas.rs
crates/xlstream-eval/tests/end_to_end/helpers/: mod.rs
crates/xlstream-eval/tests/fixtures/: .gitignore  regression.xlsx
crates/xlstream-eval/tests/fixtures/aggregate/: basic_aggregates.xlsx  minifs_maxifs.xlsx  sumif.xlsx  sumifs.xlsx  sumproduct.xlsx
crates/xlstream-eval/tests/fixtures/date/: date_math.xlsx  date_parts.xlsx  workdays.xlsx
crates/xlstream-eval/tests/fixtures/engineering/: base.xlsx  bin2dec_dec2bin.xlsx  bitwise.xlsx  complex.xlsx  convert.xlsx  cross_base.xlsx  delta_gestep.xlsx  erf_erfc.xlsx  hex2dec_dec2hex.xlsx  oct2dec_dec2oct.xlsx
crates/xlstream-eval/tests/fixtures/financial/: basic_financial.xlsx  npv.xlsx
crates/xlstream-eval/tests/fixtures/info/: row_column.xlsx  rows_columns.xlsx  type_checks.xlsx
crates/xlstream-eval/tests/fixtures/issues/: issue-136-cross-sheet-cell-ref.xlsx  issue-137-cross-sheet-simple-aggregate.xlsx  issue-138-bounded-aggregate-row-bounds.xlsx  issue-138-bounded-conditional-aggregate.xlsx  issue-139-formula-column-aggregates.xlsx  issue-139-prelude-formula-eval.xlsx  issue-140-aggregate-literal-args.xlsx  issue-141-countif-equals-criteria.xlsx  issue-142-sumif-wildcard-text-only.xlsx  issue-143-lookup-range-bounds.xlsx  issue-144-date-year-adjust.xlsx  issue-161-wildcard-blank.xlsx  issue-175-countif-text-compare.xlsx  issue-76-self-ref-max-iter-1.xlsx  issue-76-self-referential-formulas.xlsx  keep-formulas-cross-sheet.xlsx  keep-formulas-mixed-column.xlsx  keep-formulas.xlsx
crates/xlstream-eval/tests/fixtures/logical/: boolean_logic.xlsx  if_ifs_switch.xlsx  iferror_ifna.xlsx
crates/xlstream-eval/tests/fixtures/lookup/: choose.xlsx  hlookup.xlsx  index_match.xlsx  table_references.xlsx  vlookup.xlsx  xlookup.xlsx
crates/xlstream-eval/tests/fixtures/math/: arithmetic_math.xlsx  ceiling_floor.xlsx  ceiling_floor_variants.xlsx  combin.xlsx  degrees_radians.xlsx  even_odd.xlsx  fact.xlsx  gcd_lcm.xlsx  hyperbolic.xlsx  inverse_hyperbolic.xlsx  logarithms.xlsx  mround.xlsx  reciprocal_trig.xlsx  roman_arabic.xlsx  round.xlsx  subtotal_aggregate.xlsx  trigonometry.xlsx  trunc.xlsx
crates/xlstream-eval/tests/fixtures/operators/: arithmetic.xlsx  comparison.xlsx  concatenation.xlsx
crates/xlstream-eval/tests/fixtures/statistical/: avedev.xlsx  binom_dist.xlsx  correl.xlsx  covariance.xlsx  expon_dist.xlsx  forecast_linear.xlsx  large_small.xlsx  mode_sngl.xlsx  norm_dist.xlsx  norm_s_dist.xlsx  percentile.xlsx  permut.xlsx  poisson_dist.xlsx  quartile.xlsx  rank.xlsx  skew_kurt.xlsx  slope_intercept_rsq.xlsx  stdev_var.xlsx  (+1 more)
crates/xlstream-eval/tests/helpers/: mod.rs
crates/xlstream-eval/tests/regressions/: issue_cross_sheet_aggregates.rs  issue_grouped_sumif.rs  issue_product_literals.rs  mod.rs
crates/xlstream-io/: Cargo.toml  README.md
crates/xlstream-io/src/: convert.rs  formula_preserve.rs  lib.rs  reader.rs  sheet_handle.rs  stream.rs  table_meta.rs  writer.rs
crates/xlstream-io/tests/: error_paths.rs  perf_smoke.rs  reader.rs  round_trip.rs  writer.rs
crates/xlstream-io/tests/helpers/: mod.rs
crates/xlstream-parse/: Cargo.toml  README.md
crates/xlstream-parse/src/: ast.rs  classify.rs  function_meta.rs  lib.rs  parser.rs  references.rs  resolve.rs  resolve_tables.rs  rewrite.rs  sets.rs  view.rs
crates/xlstream-parse/tests/: classify_aggregate.rs  classify_lookup.rs  classify_mixed.rs  classify_row_local.rs  classify_streaming_sheet.rs  classify_unsupported.rs  parse.rs  references.rs  rewrite.rs  view.rs
crates/xlstream/src/: lib.rs
(+147 files in other folders)
