# xlstream workspace root.
# Crates are added in Phase 1 — see docs/phases/phase-01-scaffolding.md.

[workspace]
resolver = "2"
members = [
    "crates/xlstream-core",
    "crates/xlstream-parse",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cilladev/xlstream"
homepage = "https://github.com/cilladev/xlstream"
authors = ["Priscilla Emasoga"]

[workspace.dependencies]
# xlsx I/O
calamine = "0.34"
rust_xlsxwriter = { version = "0.94", features = ["constant_memory", "zlib", "ryu"] }

# formula parser — reused from formualizer
# formualizer-parse: upstream 0.5.x does not exist; 1.x pulls in
# formualizer-common 1.1.2 which uses Rust 1.88 `let` chains, incompatible
# with our 1.85 toolchain pin. Re-evaluated in Phase 2 (see
# docs/phases/phase-02-parser.md). Phase 1 ships the Ast as a self-contained
# stub per the plan's Task 2.3 fallback guidance.
# formualizer-parse = "0.5"

# Python binding
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }

# Concurrency + utilities
rayon = "1.10"
crossbeam-channel = "0.5"
smallvec = "1.13"
thiserror = "2.0"
tracing = "0.1"
phf = { version = "0.11", features = ["macros"] }
memory-stats = "1.2"

# Dev-only
proptest = "1.5"
criterion = "0.5"
tempfile = "3.14"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
lto = "fat"
codegen-units = 1
