# xlstream workspace root.
# Crates are added in Phase 1 — see docs/phases/phase-01-scaffolding.md.

[workspace]
resolver = "2"
members = [
    "crates/xlstream-core",
    "crates/xlstream-parse",
    "crates/xlstream-io",
    "crates/xlstream-eval",
    "crates/xlstream-cli",
    "bindings/python",
    "benchmarks",
]
default-members = [
    "crates/xlstream-core",
    "crates/xlstream-parse",
    "crates/xlstream-io",
    "crates/xlstream-eval",
    "crates/xlstream-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cilladev/xlstream"
homepage = "https://github.com/cilladev/xlstream"
authors = ["Priscilla Emasoga"]

[workspace.dependencies]
# xlsx I/O
calamine = "0.34"
rust_xlsxwriter = { version = "0.94", features = ["constant_memory", "zlib", "ryu"] }

# formula parser — pinned exactly per ADR docs/decisions/2026-04-18-phase-02-toolchain-bump.md.
formualizer-parse = "=1.1.2"
formualizer-common = "=1.1.2"

# Python binding
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }

# Excel number formatting
ssfmt = "0.1.2"
rust_decimal = { version = "1.41", features = ["maths"] }

# Concurrency + utilities
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"
smallvec = "1.13"
thiserror = "2.0"
tracing = "0.1"
phf = { version = "0.11", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
memory-stats = "1.2"

# Dev-only
proptest = "1.5"
criterion = "0.5"
tempfile = "3.14"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

[profile.bench]
lto = "fat"
codegen-units = 1
