# xlstream workspace root.
# xlstream workspace root.

[workspace]
resolver = "2"
members = [
    "crates/xlstream-core",
    "crates/xlstream-parse",
    "crates/xlstream-io",
    "crates/xlstream-eval",
    "crates/xlstream",
    "crates/xlstream-cli",
    "bindings/python",
    "benchmarks",
]
default-members = [
    "crates/xlstream-core",
    "crates/xlstream-parse",
    "crates/xlstream-io",
    "crates/xlstream-eval",
    "crates/xlstream",
    "crates/xlstream-cli",
]

[workspace.package]
version = "0.4.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cilladev/xlstream"
homepage = "https://github.com/cilladev/xlstream"
authors = ["Priscilla Emasoga"]

[workspace.dependencies]
# xlsx I/O
calamine = "0.36"
rust_xlsxwriter = { version = "0.96", features = ["constant_memory", "zlib", "ryu"] }

# formula parser — pinned exactly per ADR docs/decisions/2026-04-18-phase-02-toolchain-bump.md.
formualizer-parse = "=2.0.0"
formualizer-common = "=2.0.0"

# Python binding
pyo3 = { version = "0.29", features = ["extension-module", "abi3-py39"] }

# Excel number formatting
ssfmt = "0.1.2"
rust_decimal = { version = "1.42", features = ["maths"] }

# Concurrency + utilities
rayon = "1.10"
crossbeam-channel = "0.5"
num_cpus = "1.16"
smallvec = "1.13"
thiserror = "2.0"
tracing = "0.1"
bitflags = "2.13"
phf = { version = "0.13", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
memory-stats = "1.2"

# Dev-only
proptest = "1.5"
criterion = "0.8"
tempfile = "3.14"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = true

# Python wheels only. Fat LTO drops encoding_rs static definitions when
# linking the abi3 cdylib on linux-gnu (undefined R_X86_64_PC32
# relocations, "recompile with -fPIC"); thin LTO links clean. Rust/CLI
# builds keep fat LTO.
[profile.wheel]
inherits = "release"
lto = "thin"

[profile.bench]
lto = "fat"
codegen-units = 1
