[package]
name = "xlstream-benchmarks"
description = "Benchmark harness for the xlstream streaming Excel evaluator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "generate-fixtures"
path = "src/bin/generate_fixtures.rs"

[[bench]]
name = "parse"
harness = false

[[bench]]
name = "arithmetic"
harness = false

[[bench]]
name = "lookup"
harness = false

[[bench]]
name = "aggregate"
harness = false

[[bench]]
name = "string"
harness = false

[[bench]]
name = "math"
harness = false

[[bench]]
name = "conditional"
harness = false

[[bench]]
name = "info"
harness = false

[dependencies]
xlstream-core = { path = "../crates/xlstream-core", version = "0.2.0" }
xlstream-eval = { path = "../crates/xlstream-eval", version = "0.2.0" }
xlstream-io = { path = "../crates/xlstream-io", version = "0.2.0" }
xlstream-parse = { path = "../crates/xlstream-parse", version = "0.2.0" }
rust_xlsxwriter = { version = "0.94", features = ["zlib", "ryu"] }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
memory-stats.workspace = true
tempfile.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
