[package]
name = "xlstream-python"
description = "Python bindings for the xlstream streaming Excel evaluator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
publish = false

[lib]
name = "_xlstream"
crate-type = ["cdylib"]

[dependencies]
pyo3.workspace = true
xlstream-core = { path = "../../crates/xlstream-core", version = "0.1.0" }
xlstream-eval = { path = "../../crates/xlstream-eval", version = "0.1.0" }
xlstream-io = { path = "../../crates/xlstream-io", version = "0.1.0" }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
