[build-system]
requires = ["maturin>=1.13,<2.0"]
build-backend = "maturin"

[project]
name = "xlstream"
requires-python = ">=3.9"
dynamic = ["version"]
description = "Streaming Excel formula evaluation engine"
readme = "README.md"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "Priscilla Emasoga" }]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
Homepage = "https://github.com/cilladev/xlstream"
Repository = "https://github.com/cilladev/xlstream"
"Bug Tracker" = "https://github.com/cilladev/xlstream/issues"
Documentation = "https://github.com/cilladev/xlstream/blob/main/docs/functions.md"
Benchmarks = "https://github.com/cilladev/xlstream/tree/main/benchmarks/reports"
Changelog = "https://github.com/cilladev/xlstream/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.maturin]
bindings = "pyo3"
module-name = "xlstream._xlstream"
python-source = "py_src"
features = ["pyo3/extension-module"]
strip = true
