[package]
name = "xlstream-core"
description = "Core value and error types for the xlstream streaming Excel evaluator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["excel", "xlsx", "streaming", "formula", "spreadsheet"]
categories = ["data-structures", "parser-implementations"]

[dependencies]
thiserror.workspace = true

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
cargo_common_metadata = "allow"
