[package]
name = "xlstream-parse"
description = "Formula parser adapter for the xlstream streaming Excel evaluator"
keywords = ["excel", "xlsx", "streaming", "formula", "parser"]
categories = ["parser-implementations"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[dependencies]
xlstream-core = { path = "../xlstream-core", version = "0.1.1" }
formualizer-parse = { workspace = true }
formualizer-common = { workspace = true }
smallvec = { workspace = true }
phf = { workspace = true }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cargo_common_metadata = "allow"
module_name_repetitions = "allow"
